[project]
name = "snippets"
version = "0.0.0"
description = "個人用の汎用スニペット / スクリプト置き場"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = ["mypy>=1.11", "ruff>=0.6"]

[tool.uv]
package = false

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003"]  # 和文コメント前提

[tool.mypy]
python_version = "3.12"
strict = true
